{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 90,
  "lineage": "f70a041e-793f-0270-6207-c56b4f98b248",
  "resources": [
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:internet-gateway/igw-0eab034eddf4b3462",
            "id": "igw-0eab034eddf4b3462",
            "owner_id": "311355929583",
            "tags": {
              "Name": "my_gateway"
            },
            "tags_all": {
              "Name": "my_gateway"
            },
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.main",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:vpc/vpc-0412c7be4fadbcefd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06cff2a6ea28542c5",
            "default_route_table_id": "rtb-04ab9f65dce11acd9",
            "default_security_group_id": "sg-0d7930c45f2f8ea86",
            "dhcp_options_id": "dopt-0c52d406c6c001c38",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0412c7be4fadbcefd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ab9f65dce11acd9",
            "owner_id": "311355929583",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096d111d137ba6b4d",
            "domain": "vpc",
            "id": "eipalloc-096d111d137ba6b4d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-228-105-97.compute-1.amazonaws.com",
            "public_ip": "34.228.105.97",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096d111d137ba6b4d",
            "connectivity_type": "public",
            "id": "nat-0d60e6d43074ff4b9",
            "network_interface_id": "eni-04776db3695c85a7e",
            "private_ip": "10.0.0.112",
            "public_ip": "34.228.105.97",
            "subnet_id": "subnet-0a07de3a815a6aa7f",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat"
            }
          },
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main",
            "module.nat.aws_eip.nat_eip",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.pub_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:311355929583:instance/i-091e274be51e3686f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-091e274be51e3686f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ansible",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0451f03bf004b0985",
            "private_dns": "ip-10-0-0-49.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.49",
            "public_ip": "50.19.154.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf1ae358640064b0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a07de3a815a6aa7f",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-07b37101bce5f982a"
            ]
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.securityGroup.aws_security_group.sec-group",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.securityGroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:security-group/sg-07b37101bce5f982a",
            "description": "security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07b37101bce5f982a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "311355929583",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3313884f1e83f091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d60e6d43074ff4b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3313884f1e83f09",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main",
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eab034eddf4b3462",
            "id": "r-rtb-09e2f7a2b3964ccaf1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e2f7a2b3964ccaf",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.gateway.aws_internet_gateway.gw",
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:route-table/rtb-0e3313884f1e83f09",
            "id": "rtb-0e3313884f1e83f09",
            "owner_id": "311355929583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:route-table/rtb-09e2f7a2b3964ccaf",
            "id": "rtb-09e2f7a2b3964ccaf",
            "owner_id": "311355929583",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0865b8e246c50fe66",
            "route_table_id": "rtb-0e3313884f1e83f09",
            "subnet_id": "subnet-04193d266acb0095c"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb5b2c7ecbe4fb2b",
            "route_table_id": "rtb-0e3313884f1e83f09",
            "subnet_id": "subnet-0f7b192cb4013c54e"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.private",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb2fdedc69ae9895",
            "route_table_id": "rtb-09e2f7a2b3964ccaf",
            "subnet_id": "subnet-0a07de3a815a6aa7f"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05168aed10384e3d2",
            "route_table_id": "rtb-09e2f7a2b3964ccaf",
            "subnet_id": "subnet-00ddab43d0ea5ed98"
          },
          "dependencies": [
            "module.main.aws_vpc.main",
            "module.subnet.aws_route_table.public",
            "module.subnet.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-04193d266acb0095c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04193d266acb0095c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private1"
            },
            "tags_all": {
              "Name": "private1"
            },
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-0f7b192cb4013c54e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7b192cb4013c54e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private2"
            },
            "tags_all": {
              "Name": "private2"
            },
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        },
        {
          "index_key": "public1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-0a07de3a815a6aa7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a07de3a815a6aa7f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public1"
            },
            "tags_all": {
              "Name": "public1"
            },
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        },
        {
          "index_key": "public2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311355929583:subnet/subnet-00ddab43d0ea5ed98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ddab43d0ea5ed98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311355929583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public2"
            },
            "tags_all": {
              "Name": "public2"
            },
            "vpc_id": "vpc-0412c7be4fadbcefd"
          },
          "dependencies": [
            "module.main.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}